--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/bf923171d9.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
 
   <!-- Bootstrap Scripts -->
